--- a/Prestmos/src/main/resources/application.properties
+++ b/Prestmos/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.driver-class-name-com.mysql.cj.jsbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/E-commers
+spring.datasource.username=root
+spring.datasource.password=1234
 
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+@logging.level.org.hibernate.SQL=DEBUG
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
